@@ -778,6 +778,7 @@ a.help {
 
 .vnbrowse .tc2 { text-align: right; padding: 0; }
 .vnbrowse .tc3 { padding: 0; }
+.vnbrowse .tc5 { text-align: right; padding-right: 10px; }
 #q { width: 300px }
 #advselect {
   text-align: center;
