@@ -3,6 +3,7 @@
 	- Search dropdown calls the return function automatically on select
 	- Revised the media list
 	- Added a checkbox to releases to indicate a patch
+	- VN popularity ranking
 
 2.1 - 2008-12-29
 	- Skin support
